--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </form>
         <button
           onclick="calcAvarage(); return validateForm()"
-          class="shadow-lg bg-slate-300 w-20 p-2"
+          class="hover:bg-white transition duration-150 hover:ease-in shadow-lg bg-slate-300 w-20 p-2"
         >
           calculate
         </button>
