--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>unemployment calculator</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="flex justify-center w-[100vw] h-[100vh]">
