--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
             />
           </div>
 
-          <div class="justify-between mt-4 flex flex-row items-center h-7">
+          <div class="mt-4 flex justify-between flex-row items-center h-7">
             <p class="text-sm">5th, 6th month</p>
             <p class="text-sm">50%</p>
             <input
