Changed meta url

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="refresh"
-      content="0; url=https://kristersgcode.github.io/unemployCalc/public/index.html"
+      content="0; url=https://kristersgcode.github.io/public/index.html"
     />
     <title>unemployment calculator</title>
     <link rel="stylesheet" href="styles.css" />
